# RM2021-Vision-Hero

./: README.md
RoboRTS/roborts_bringup/launch/: detection.launch
RoboRTS/roborts_camera/: CMakeLists.txt  camera_node.cpp  camera_node.h
RoboRTS/roborts_camera/MER/: CMakeLists.txt  GxCamera.cpp  GxCamera.hpp  MER_driver.cpp  MER_driver.h
RoboRTS/roborts_camera/config/: camera_param.prototxt
RoboRTS/roborts_detection/armor_detection/: armor_detection_client.cpp  armor_detection_node.cpp  gimbal_control.cpp
RoboRTS/roborts_detection/armor_detection/config/: armor_detection.prototxt
RoboRTS/roborts_detection/armor_detection/constraint_set/: constraint_set.cpp
RoboRTS/roborts_detection/armor_detection/constraint_set/config/: constraint_set.prototxt
RoboRTS/roborts_detection/cmake_module/: FindProtoBuf.cmake
RoboRTS/roborts_msgs/: CMakeLists.txt
RoboRTS/roborts_msgs/msg/: DataRecord.msg  EnemyColor.msg  GimbalFdbAngle.msg  RelativeAngle.msg
RoboRTS/roborts_serial/: CMakeLists.txt  data_record.cpp  main.cpp  package.xml
RoboRTS/roborts_serial/include/: Crc.hpp  LogPacket.hpp  LogStream.hpp  Packet.hpp  PacketBehavior.hpp  PacketInfo.hpp  PacketModel.hpp  RefereePacket.hpp  RefereeStream.hpp  RostopicPacket.hpp  RostopicStream.hpp  SerialPacket.hpp  SerialStream.hpp  Stream.hpp  StreamBytesBuffer.hpp
RoboRTS/roborts_serial/src/: Crc.cpp  LogPacket.cpp  LogStream.cpp  Packet.cpp  PacketBehavior.cpp  PacketModel.cpp  RefereePacket.cpp  RefereeStream.cpp  RostopicStream.cpp  SerialStream.cpp  Stream.cpp  StreamBytesBuffer.cpp
RoboRTS/roborts_watchdog/: CMakeLists.txt  package.xml
RoboRTS/roborts_watchdog/src/: watchdog.cpp
